[package]
name = "see-u-l4ter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
sha2 = "0.10.8"
hex-literal = "0.4.1"
base64 = "0.22.0"
chrono = "0.4.37"
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive", "string"] }
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde_json = "1.0.115"
ncurses = "6.0.0"
crossterm = "0.27.0"
inquire = "0.7.4"
xdg = "2.5.2"
regex = "1.10.4"
jsonwebtoken = "9.3.0"
axum = "0.7.5"
once_cell = "1.19.0"
axum-extra = "0.9.3"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
