[package]
name = "see-u-l4ter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
sha2 = "0.10.8"
hex-literal = "0.4.1"
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["serde"] }
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive", "string"] }
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde_json = "1.0.115"
ncurses = "6.0.0"
crossterm = "0.27.0"
inquire = "0.7.4"
xdg = "2.5.2"
regex = "1.10.4"
jsonwebtoken = "9.3.0"
axum = { version = "0.7.2", features = ["tokio", "http1", "multipart"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
once_cell = "1.19.0"
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
time = "0.3.36"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "sqlite", "chrono", "uuid", "postgres"] }
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
data-encoding = "2.5.0"
ring = "0.17.8"
password-hash = "0.5.0"
futures-util = "0.3.30"
openssl = { version = "0.10", features = ["vendored"] }
zip = "1.1.1"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
